# completion-tool

./: .gitignore  README.rst  pyproject.toml
examples/: README.rst  fibonacci.py
prompt/: api.py  cli.py  main.py  read.py  schema.py  write.py
