[tool.poetry]
name = "prompt"
version = "0.1.0"
description = ""
authors = ["devforfu <developer.z@outlook.com>"]

[tool.poetry.scripts]
codex = "prompt.main:main"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
